# deep-learning

./: CMakeLists.txt  README.md
examples/: example-neuron.cpp
include/neuron/: neuron.h
src/neuron/: neuron.cpp
